Disable some tests on Mac that need their test logic updated to specify a CoreText typsetter.

These failures started in r530064 on various permutations of macOS versions.
The test logic now defaults to using the harfbuzz typsetter, but these are
testing Cocoa UI, so they need to be updated. The non-test code should be fine.

TBR=msw@chromium.org

Bug: 803354
Change-Id: I678004cd88e53a5c7bf044002506580bd058975f
Reviewed-on: https://chromium-review.googlesource.com/872812
Reviewed-by: Trent Apted <tapted@chromium.org>
Commit-Queue: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#530093}
Former-commit-id: e409e122d710ae95712529b36d3e5cd95ab4ac26